[package]
name = "tracing-configurable"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
argable-parser = { git = "https://github.com/Flassie/argable-parser.git", optional = true }
chrono = "0.4"
anyhow = "1"
once_cell = "1"
serde = { version = "1", optional = true }

[features]
default = [ "parse" ]
serde = [ "dep:serde" ]
parse = [ "dep:argable-parser" ]